fix: image overflow in getting-started page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -945,11 +945,13 @@ img[src$='#terminal'] {
   }
 }
 
-img[alt='PresetEditor'] {
-  max-width: 600px;
-}
-img[alt='APIKeys'] {
-  max-width: 600px;
+@media only screen and (min-width: 768px) {
+  img[alt='PresetEditor'] {
+    max-width: 600px;
+  }
+  img[alt='APIKeys'] {
+    max-width: 600px;
+  }
 }
 
 .navbar-book-demo svg {
